scripts/acn/k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ph-deployment-name-here
  namespace: ph-cluster-namespace-here
  labels:
    app: ph-deployment-name-here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ph-deployment-name-here 
  template:
    metadata:
      labels:
        app: ph-deployment-name-here

    spec:
      containers:
      - image: ph-gcr-image-with-tag-here
        name: ph-container-name-here
        ports:
        - containerPort: ph-node-port-number-here
        - containerPort: ph-node-delegate-port-number-here

        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "4000Mi"
            cpu: "2000m"
        
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ph-deployment-name-here
  namespace: ph-cluster-namespace-here
spec:
  selector:
    app: ph-deployment-name-here
  ports:
    - name: libp2p 
      protocol: TCP
      port: ph-node-port-number-here
      targetPort: ph-node-port-number-here
    - name: tcp
      protocol: TCP
      port: ph-node-delegate-port-number-here
      targetPort: ph-node-delegate-port-number-here
