scripts/acn/k8s/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: deployment-name-here
  namespace: agents-p2p-dht
spec:
  selector:
    app: istio-fetchpubig
    istio: ingressgateway
  servers:
  - port:
      name: libp2p
      number: node-port-number-here
      protocol: TCP
    hosts:
    - agents-p2p-dht.sandbox.fetch-ai.com
  - port:
      name: tcp
      number: node-delegate-port-number-here
      protocol: TCP
    hosts:
    - agents-p2p-dht.sandbox.fetch-ai.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: deployment-name-here
  namespace: agents-p2p-dht
spec:
  gateways:
  - deployment-name-here
  hosts:
  - agents-p2p-dht.sandbox.fetch-ai.com
  tcp:
  - match:
    - port: node-port-number-here
    route:
    - destination:
        host: deployment-name-here
        port:
          number: node-port-number-here
  - match:
    - port: node-delegate-port-number-here
    route:
    - destination:
        host: deployment-name-here
        port:
          number: node-delegate-port-number-here
